--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
             <version>5.8.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>32.1.3-jre</version>
+            <!-- or, for Android: -->
+
+        </dependency>
     </dependencies>
 
 </project>
